welcome.lessons.welcome.array.island.Island.scala.error
island:13: error: ')' expected but 'else' found.
		else if (num(x)<num(x-1) {
                ^