welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	val n:Int=num.length.toInt
	var compteur:Int=0


	for (x<- 1 to n) {
		if (num(x)==num(x-1)) {
			compteur=compteur
		}
		else if (num(x)>num(x-1) {
			compteur=compteur+1
		}
		else if (num(x)<num(x-1) {
			compteur=compteur
		}
		
			
		}
	return compteur
	}

